landing, portfoio, lio finished, started about

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header role="header">
@@ -59,7 +59,71 @@
         
         </section>
         <section class="portfolio">
-            <h2>Portfolio</h2>
+            <div class="portfolioHeading">
+                 <h2>Portfolio</h2>
+            </div>
+            <div class="portfolioBar">
+                <div class="pBarP pBarA">
+                    <p>All</p>
+                </div>
+                <div class="pBarP pBarB">
+                    <p>Featured</p>
+                </div>
+            </div>
+            <div class="projectDisplay">
+                <div class="projectRow projectRowA">
+                    <div class="project">
+                        <img src="marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="job search site preview"/>
+                    </div>
+                    <div class="project">
+                        <img class="pageTurners" src="pageTurners2.png" alt="reading list application preview" />
+                    </div>
+                </div>
+                <div class="projectRow projectRowB">
+                    <div class="project">
+                        <img src="pokeCatch2.png" alt="pokemon search tool preview" />
+                    </div>
+                    <div class="project">
+                        <img class="pageTurners" src="NutriCo.png" alt="food journal preview"/>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolioBar">
+            </div>
+        </section>
+        <section class="wrapper about">
+            
+            <h3>ABOUT ME</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni molestiae voluptas maxime non sed, iure fugiat quod deserunt qui ipsum.</p>
+            <h4>USING NOW: </h4>
+
+            <div class="techStack">
+                <div class="tech">
+                    <span class="iconify-inline" data-icon="vscode-icons:file-type-html" data-width="110" data-height="110"></span>
+                    <p class="techStackName">HTML5</p>
+                </div>
+                <div class="tech">
+                    <p class="techStackName">HTML5</p>
+                </div>
+                <div class="tech">
+                    <p class="techStackName">HTML5</p>
+                </div>
+                <div class="tech">
+                    <p class="techStackName">HTML5</p>
+                </div>
+                <div class="tech">
+                    <p class="techStackName">HTML5</p>
+                </div>
+                <div class="tech">
+                    <p class="techStackName">HTML5</p>
+                </div>
+                <div class="tech">
+                    <p class="techStackName">HTML5</p>
+                </div>
+                <div class="tech">
+                    <p class="techStackName">HTML5</p>
+                </div>
+            </div>
         </section>
     </main>
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
