--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul class="iconsFlex">
                 <li class="landingLi">
                     <div>
-                        <a href="mailto:antoniibrahimdeveloper@gmail.com"><span class="iconify-inline landingIcon" data-icon="fontisto:at" style="color: white;" data-width="38" data-height="34"></span></a>
+                        <a href="mailto:antoniibrahimdeveloper@gmail.com?subject=Hi Antoni!"><span class="iconify-inline landingIcon" data-icon="fontisto:at" style="color: white;" data-width="38" data-height="34"></span></a>
                     </div>
                 </li>
 
@@ -77,20 +77,20 @@
                 </div>
             </div>
             <div class="projectDisplay">
-                <div class="projectRow projectRowA wrapper">
+                <div class="projectRow projectRowA">
                     <div class="project">
                         <img src="marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="job search site preview"/>
                     </div>
                     <div class="project">
-                        <img class="pageTurners" src="pageTurners2.png" alt="reading list application preview" />
+                        <img src="pageTurners2.png" alt="reading list application preview" />
                     </div>
                 </div>
-                <div class="projectRow projectRowB wrapper">
+                <div class="projectRow projectRowB">
                     <div class="project">
                         <img src="pokeCatch2.png" alt="pokemon search tool preview" />
                     </div>
                     <div class="project">
-                        <img class="pageTurners" src="NutriCo.png" alt="food journal preview"/>
+                        <img src="NutriCoMock.png" alt="food journal preview"/>
                     </div>
                 </div>
             </div>
@@ -105,40 +105,39 @@
 
             <div class="techStack">
                 <div class="tech">
-                    <span class="iconify-inline stackIcon" data-icon="vscode-icons:file-type-html" data-width="110" data-height="110"></span>
+                    <span class="iconify-inline stackIcon" data-icon="vscode-icons:file-type-html" data-width="100" data-height="100"></span>
                     <p class="techStackName">HTML5</p>
                 </div>
                 <div class="tech">
-                    <span class="iconify-inline stackIcon" data-icon="vscode-icons:file-type-css" data-width="110" data-height="110"></span>
+                    <span class="iconify-inline stackIcon" data-icon="vscode-icons:file-type-css" data-width="100" data-height="100"></span>
                     <p class="techStackName">CSS3</p>
                 </div>
                 <div class="tech">
-                    <span class="iconify-inline stackIcon" data-icon="logos:sass" data-width="110" data-height="110"></span>
+                    <span class="iconify-inline stackIcon" data-icon="logos:sass" data-width="100" data-height="100"></span>
                     <p class="techStackName">SASS</p>
                 </div>
                 <div class="tech">
-                    <span class="iconify-inline stackIcon" data-icon="logos:javascript" data-width="110" data-height="110"></span>
+                    <span class="iconify-inline stackIcon" data-icon="logos:javascript" data-width="100" data-height="100"></span>
                     <p class="techStackName">Javascript</p>
                 </div>
                 <div class="tech">
-                    <span class="iconify-inline stackIcon" data-icon="logos:react" style="color: blue;" data-width="110" data-height="110"></span>
+                    <span class="iconify-inline stackIcon" data-icon="logos:react" style="color: blue;" data-width="100" data-height="100"></span>
                     <p class="techStackName">React</p>
                 </div>
                 <div class="tech">
-                    <span class="iconify-inline stackIcon" data-icon="icomoon-free:git" style="color: red;" data-width="110" data-height="110"></span>
+                    <span class="iconify-inline stackIcon" data-icon="icomoon-free:git" style="color: red;" data-width="100" data-height="100"></span>
                     <p class="techStackName">Git</p>
                 </div>
                 <div class="tech">
-                    <span class="iconify-inline stackIcon" data-icon="logos:firebase" style="color: red;" data-width="110" data-height="110"></span>
+                    <span class="iconify-inline stackIcon" data-icon="logos:firebase" style="color: red;" data-width="100" data-height="100"></span>
                     <p class="techStackName">Firebase</p>
                 </div>
                 <div class="tech">
-                    <span class="iconify-inline stackIcon" data-icon="grommet-icons:figma" style="color: red;" data-width="110"
-                        data-height="110"></span>
+                    <span class="iconify-inline stackIcon" data-icon="grommet-icons:figma" style="color: red;" data-width="100" data-height="100"></span>
                     <p class="techStackName">Figma</p>
                 </div>
                 <div class="tech">
-                    <span class="iconify-inline stackIcon" data-icon="akar-icons:jquery-fill" data-width="110" data-height="110"></span>
+                    <span class="iconify-inline stackIcon" data-icon="akar-icons:jquery-fill" data-width="100" data-height="100"></span>
                     <p class="techStackName">jQuery</p>
                 </div>
             </div>
