pushing first animated portfolio project

--- a/index.html
+++ b/index.html
@@ -81,8 +81,12 @@
                     <div class="project">
                         <img src="marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="job search site preview"/>
                     </div>
-                    <div class="project">
-                        <img src="pageTurners2.png" alt="reading list application preview" />
+                    <div class="video">
+                        <video playsinline autoplay muted loop width="500" height="500">
+                        
+                            <source src="curtainfixed.mp4" type="video/mp4">
+                        
+                        </video>
                     </div>
                 </div>
                 <div class="projectRow projectRowB">
@@ -204,7 +208,7 @@
     </main>
     <footer>
         <div class="footerDiv">
-            <a href="#top"><span class="iconify-inline" data-icon="ic:baseline-keyboard-double-arrow-up" style="color: white;" data-width="30"
+            <a href="#top"><span class="iconify-inline doubleArrow" data-icon="ic:baseline-keyboard-double-arrow-up" style="color: white;" data-width="30"
                 data-height="30"></span>
             <p>Back to Top</p></a>
             <div class="footerLinks">
