fixed height issues, added javascript for portfolio tab and cursor change

--- a/index.html
+++ b/index.html
@@ -98,8 +98,61 @@
                     </div>
                 </div>
             </div>
-            <div class="portfolioBar">
+
+            <div class="featured">
+                <h5 class="wrapper">Featured Works</h5>
+
+                <div class="featuredProject wrapper">
+                    <div class="featuredProjectImage">
+                        <img src="pageTurnerGIF.gif" alt="Page Turner App demo">
+                    </div>
+                    <div class="featuredProjectText">
+                        <h4>Page Turners</h4>
+                        <div class="fPTS">
+                            <span>2022</span> 
+                            <p>
+
+                                <span class="iconify-inline" data-icon="akar-icons:react-fill" style="color: black;" data-width="35"
+                                    data-height="35"></span>
+
+                                <span class="iconify-inline" data-icon="bx:bxl-firebase" style="color: black;" data-width="35" data-height="35"></span>
+
+                                <span class="iconify-inline" data-icon="cib:sass-alt" style="color: black;" data-width="35" data-height="35"></span>
+
+                            </p>
+                            <p>React Application</p>
+                        </div>
+                        <p class="featureDescription">The first React group project of my career, using a combination of Firebase and the Google Books API, our group was able to create a minimalist approach to a reading list application for avid readers to track their progress.Readers can set their reading list as they find books they love, and mark them off where their completed list remains.</p>
+                    </div>
+                </div>
+
+                <div class="featuredProject wrapper">
+                    <div class="featuredProjectImage">
+                        <img src="nutricoGif.gif" alt="demo gif of NutriCo Food Journal">
+                    </div>
+                    <div class="featuredProjectText">
+                        <h4>NutriCo Food Journal</h4>
+                        <div class="fPTS">
+                            <span>2022</span>
+                            <p>
+                                <span class="iconify-inline" data-icon="akar-icons:react-fill" style="color: black;" data-width="35"
+                                data-height="35"></span>
+
+                                <span class="iconify-inline" data-icon="bx:bxl-firebase" style="color: black;" data-width="35" data-height="35"></span>
+
+                                <span class="iconify-inline" data-icon="cib:sass-alt" style="color: black;" data-width="35" data-height="35"></span>
+                            </p>
+                            <p>React Application</p>
+                        </div>
+                        <p class="featureDescription">The very first React project I ever completed, using a nutritional API to track and log the user's daily diet and compile macronutrients. Firebase was an optional, task but I believed it was essential for the functionality.</p>
+                    </div>
+                </div>
+
             </div>
+
+            <div class="portfolioBar"><p></p>
+            </div>
+
         </section>
         <section class="wrapper about" id="about">
             
