changed landing message

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div class="landingTextAndImage">
                 <div class="landingText">
-                    <h1>Hi, I am Antoni. <br>Front-End Developer</h1>
+                    <h1>Hi, I'm Antoni. <br>Front-End Developer</h1>
                     <p>I am a Sudanese-Canadian junior web developer who specializes in making responsive applications, and more importantly, applications that are responsibly accessible. <br><br>Take a look at my porfolio below, or follow the links here to my Email, Github, and LinkedIn!  </p>
                 </div>
                 <div class="portraitDiv">
