--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
                 <div class="aboutPicture">
 
-                    <img src="catTax.JPG" alt="two cats laying on a large pillow">
+                    <img src="catTax.webp" alt="two cats laying on a large pillow">
 
                 </div>
 
