stylistic changes, change of font

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Nunito:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Karla:wght@300&family=Montserrat:wght@500;600;700&family=Nunito:wght@400;700&display=swap"
     rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -20,7 +20,7 @@
     <header role="banner" id="top" aria-label="header">
         <nav role="navigation" class="navFlex wrapper">
             <div class="logoDiv">
-                <img src="logo.png" class="logoImage" alt="logo image"/>
+                <img src="logo.png" class="logoImage" alt="antoni ibrahim logo"/>
             </div>
             <ul class="linkFlex">
                 <li class="navLink"><a href="#portfolio">Portfolio</a></li>
@@ -35,9 +35,9 @@
                     <div>
                         <div>
                             <ul>
-                                <li class="navLink"><a class="overlayLink" href="#portfolio">Portfolio</a></li>
-                                <li class="navLink"><a class="overlayLink" href="#about">About</a></li>
-                                <li class="navLink "><a class="overlayLink" href="#contact">Contact</a></li>
+                                <li><a class="overlayLink" href="#portfolio">Portfolio</a></li>
+                                <li><a class="overlayLink" href="#about">About</a></li>
+                                <li><a class="overlayLink" href="#contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                 <div class="projectRow projectRowA wrapper">
                     <div class="video">
                         <div class="mask">
-                            <h5>Page Turners</h5>
+                            <p>Page Turners<p>
                             <a target="_blank" href="https://github.com/AntonIsami/project-four"><button>Github Repo</button></a>
                             <a target="_blank" href="https://murder-page-turners.netlify.app/"><button>Live Link</button></a>
                         </div>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="project">
                         <div class="mask">
-                            <h5>TechOccupy</h5>
+                            <p>TechOccupy</p>
                             <a target="_blank" href="https://github.com/AntonIsami/techOccupy"><button>Github Repo</button></a>
                             <a target="_blank" href="https://sleepy-beaver-97a651.netlify.app/"><button>Live Link</button></a>
                         </div>
@@ -169,7 +169,7 @@
 
                     <div class="video1">
                         <div class="mask">
-                            <h5>Where's That Pokémon?</h5>
+                            <p>Where's That Pokémon?</p>
                             <a target="_blank" href="https://github.com/AntonIsami/WheresThatPokemon"><button>Github Repo</button></a>
                             <a target="_blank" href="https://jolly-noether-7e4f44.netlify.app/"><button>Live Link</button></a>
                         </div>
@@ -214,7 +214,7 @@
                     </div>
                     <div class="video">
                         <div class="mask">
-                            <h5>NutriCo</h5>
+                            <p>NutriCo</p>
                             <a target="_blank" href="https://github.com/AntonIsami/antoni-ibrahim-project-three"><button>Github Repo</button></a>
                             <a target="_blank" href="https://nutri-food-journal.netlify.app/"><button>Live Link</button></a>
                         </div>
