changed background,added portfolio animations

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="projectDisplay">
-                <div class="projectRow projectRowA wrapper">
+                <div class="projectRow projectRowA wrapper animated fade-in-left">
                     <div class="video">
                         <div class="mask">
                             <p>Page Turners<p>
@@ -139,7 +139,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="projectRow projectRowB wrapper">
+                <div class="projectRow projectRowB wrapper animated fade-in-right">
                     <div class="projectText">
                         <h5>TechOccupy</h5>
                         <p>An application for job hunters in the tech industry, users can search by job field, experience level and choose 1
@@ -165,7 +165,7 @@
                     </div>
 
                 </div>
-                <div class="projectRow projectRowC wrapper">
+                <div class="projectRow projectRowC wrapper animated fade-in-left">
 
                     <div class="video1">
                         <div class="mask">
@@ -196,7 +196,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="projectRow projectRowD wrapper">
+                <div class="projectRow projectRowD wrapper animated fade-in-right">
                     <div class="projectText">
                         <h5>NutriCo.</h5>
                         <p>React project that incorporates a nutrition API that allows the user to search for grocery products and simple foods. Users can select the items to view their nutritional info through a second API call, and add the items to their Journal <br><br>The journal is connected to Firebase through an OnValue realtime database. The database is split into two categories as the API objects are shaped differently depending on the product.
