--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="landingText">
                     <h1>Hi, I'm Antoni. <br>Front-End Developer</h1>
                     <p>I am a Sudanese-Canadian junior web developer who specializes in making responsive applications, and more importantly, applications that are responsibly accessible. </p>
-                    <p>Take a look at my porfolio below, or follow the links here to my Email, Github, and LinkedIn!  </p>
+                    <p>Take a look at my porfolio below, or follow the links here to my <br>Email, Github, and LinkedIn!  </p>
                 </div>
                 <div class="portraitDiv">
                     <img class="portraitImage" src="Portrait1.webp" alt="portrait of creator"/>
