optimization continues, video removed for image, images compressed

--- a/index.html
+++ b/index.html
@@ -212,17 +212,13 @@
                             </p>
                         </a>
                     </div>
-                    <div class="video">
+                    <div class="project">
                         <div class="mask">
                             <p>NutriCo</p>
                             <a target="_blank" href="https://github.com/AntonIsami/antoni-ibrahim-project-three"><button>Github Repo</button></a>
                             <a target="_blank" href="https://nutri-food-journal.netlify.app/"><button>Live Link</button></a>
                         </div>
-                        <video playsinline autoplay muted  width="500" height="500">
-                        
-                            <source src="nutricoVideo.mp4" type="video/mp4">
-                        
-                        </video>
+                        <img src="Nutrico.png" alt="demo of diet journal app"/>
                     </div>
 
                 </div>
