--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             <a target="_blank" href="https://github.com/AntonIsami/techOccupy"><button>Github Repo</button></a>
                             <a target="_blank" href="https://sleepy-beaver-97a651.netlify.app/"><button>Live Link</button></a>
                         </div>
-                        <img src="techOccupy.jpg" alt="job search site preview" />
+                        <img src="techOccupy.webp" alt="job search site preview" />
                     </div>
 
                 </div>
@@ -218,7 +218,7 @@
                             <a target="_blank" href="https://github.com/AntonIsami/antoni-ibrahim-project-three"><button>Github Repo</button></a>
                             <a target="_blank" href="https://nutri-food-journal.netlify.app/"><button>Live Link</button></a>
                         </div>
-                        <img src="Nutrico.png" alt="demo of diet journal app"/>
+                        <img src="Nutrico.webp" alt="demo of diet journal app"/>
                     </div>
 
                 </div>
