changed project descriptions

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="projectText">
                         <h5>TechOccupy</h5>
                         <p>An application for job hunters in the tech industry, users can search by job field, experience level and choose 1
-                            of 4 popular tech cities.<br><br>Users make their selection and submit their form which does an API call and
+                            of 4 popular tech cities.<br><br>Users make their selection and submit their form which creates a promise and
                             filters out results that fit their search parameters. Results from API display the job description from the API, locations available to work include remote availability, and an active link that takes users to the job board posting for users to apply to the position.
                             
                         </p>
@@ -184,8 +184,9 @@
                     <div class="projectText">
                         <h5>Where's That Pokémon?</h5>
                         <p>jQuery project that allows the user to search for any Pokémon from the existing database. <br><br>Results of the
-                            search list the statistics of the Pokémon, a sprite, weaknesses and an entire list of locations found for that
-                            Pokémon across the entirety of the video game series.
+                        search list the statistics of the Pokémon, a sprite, weaknesses and an entire list of locations found for that
+                        Pokémon across the entirety of the video game series. 
+                        <br><br>This search engine required two different ajax calls as the API had information separated at alternate endpoints. There are also ID endpoints that required error handling because they have no locations available.
                         </p>
                         <a target="_blank" href="https://github.com/AntonIsami/WheresThatPokemon">
                             <p>2021 <span class="iconify-inline" data-icon="akar-icons:jquery-fill" data-width="25" data-height="25">
