added full carousel

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="projectDisplay">
-                <div class="leftDiv">
+                <div class="leftDiv isHidden">
                     <span class="iconify-inline leftArrow" data-icon="akar-icons:circle-chevron-left" style="color: white;" data-width="50"
                         data-height="50"></span>
                 </div>
@@ -234,13 +234,13 @@
                         data-height="50"></span>
                 </div>
                 <div class="carouselNav">
-                    <button class="carouselIndicator"><span class="iconify-inline" data-icon="carbon:dot-mark" style="color: grey;" 
+                    <button class="carouselIndicator currentSlide"><span class="iconify-inline" data-icon="carbon:dot-mark" 
                     data-width="45" data-height="40"></span></button>
-                    <button class="carouselIndicator"><span class="iconify-inline" data-icon="carbon:dot-mark" style="color: grey;"
+                    <button class="carouselIndicator"><span class="iconify-inline" data-icon="carbon:dot-mark" 
                     data-width="45" data-height="40"></span></button>
-                    <button class="carouselIndicator"><span class="iconify-inline" data-icon="carbon:dot-mark" style="color: grey;"
+                    <button class="carouselIndicator"><span class="iconify-inline" data-icon="carbon:dot-mark" 
                     data-width="45" data-height="40"></span></button>
-                    <button class="carouselIndicator"><span class="iconify-inline" data-icon="carbon:dot-mark" style="color: grey;"
+                    <button class="carouselIndicator"><span class="iconify-inline" data-icon="carbon:dot-mark" 
                     data-width="45" data-height="40"></span></button>
                 </div>
             </div>
