--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             </video>
                         </div>
                         <div class="featuredProjectText">
-                            <h4><a href="murder-page-turners.netlify.app/" target="_blank">Page Turners</a></h4>
+                            <h4><a href="https://murder-page-turners.netlify.app/" target="_blank">Page Turners</a></h4>
                             <div class="fPTS">
                                 <span>2022</span> 
                                 <p>
@@ -291,7 +291,7 @@
                             </video>
                         </div>
                         <div class="featuredProjectText">
-                            <h4><a href="nutri-food-journal.netlify.app/" target="_blank">NutriCo Food Journal</a></h4>
+                            <h4><a href="https://nutri-food-journal.netlify.app/" target="_blank">NutriCo Food Journal</a></h4>
                             <div class="fPTS">
                                 <span>2022</span>
                                 <p>
